--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 body {
   font-family: 'Inter', sans-serif;
   background-color: #f9fafb;
   color: #1f2937;
+}
+.slick-prev:before,
+.slick-next:before {
+  color: #1d4ed8; /* blue-700 */
+  font-size: 28px;
 }
